[package]
name = "fopra_block_file_access"
version = "0.1.0"
authors = ["liemn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
alt_serde_derive = "*"
bincode = "1.2.1"
